# misc

./: .gitignore  .myenv  LICENSE  Makefile  README  README.md  TODO  commit.sh  gitignore  run.sh
linux/c/: README.md
linux/c/cmockery/: Makefile  allocate_module_test  assert_macro_test  calculator  calculator_test  config.status  configure  customer_database_test  key_value_test  libcmockery.la  libcmockery_la-cmockery.lo  libtool  product_database_test  run_tests
linux/c/cmockery/.deps/: allocate_module_test-allocate_module.Po  allocate_module_test-allocate_module_test.Po  assert_macro_test-assert_macro.Po  assert_macro_test-assert_macro_test.Po  calculator-calculator.Po  calculator_test-calculator.Po  calculator_test-calculator_test.Po  customer_database_test-customer_database.Po  customer_database_test-customer_database_test.Po  key_value_test-key_value.Po  key_value_test-key_value_test.Po  libcmockery_la-cmockery.Plo  product_database_test-product_database_test.Po  run_tests-run_tests.Po
linux/c/cmockery/.libs/: allocate_module_test  assert_macro_test  calculator_test  customer_database_test  key_value_test  libcmockery.lai  libcmockery.so.0.0.0  product_database_test  run_tests
linux/c/cmockery/autom4te.cache/: output.0  traces.0
linux/c/cmockery/src/: config.h
linux/c/cmockery/src/example/: ._database.h
linux/c/ipc/bus/: CMakeLists.txt  _CMakeLists.txt.old  build.sh  libubus.c  readme
linux/c/ipc/bus/2release/: conduit.h  test_client  test_client_debug  test_client_main.c  test_server_debug  test_server_main.c  ubus_server_command.h
linux/c/ipc/bus/bin_bak/: CDT_PRESS_CLIENT  CDT_PRESS_SERVER  hzbus  hzbusd  jshn
linux/c/ipc/bus/include/: conduit_client.h  conduit_server.h
linux/c/ipc/bus/include/json-c/: config.h
linux/c/ipc/bus/json/: CMakeLists.txt  json_tokener.c
linux/c/ipc/bus/libubox/: CMakeLists.txt  blobmsg_json.c  blobmsg_json.h  jshn.c
linux/c/ipc/bus/libubox/examples/: test_client_main.c  test_server_main.c  ubus_server_command.h
linux/c/ipc/bus/libubox/include/libubox/: blobmsg_json.h
linux/c/ipc/bus/libubox/json/: CMakeLists.txt  build.sh  json_object.c  json_util.c
linux/c/ipc/bus/ubus_conduit/: CMakeLists.txt  CMakeLists_me.txt  FIXME  README  build.sh  cdt_test.apk  conduit_client.c  conduit_client.c.reg.in.thread  conduit_client.h  conduit_common.h  conduit_server.c  conduit_server.h
linux/c/ipc/bus/ubus_conduit/conduit_java/: AndroidManifest.xml
linux/c/ipc/bus/ubus_conduit/conduit_java/src/com/horzon/conduit/mynative/: conduit.java
linux/c/ipc/bus/ubus_conduit/conduit_jni_c/: CMakeLists.txt  conduit_client_native_lib.c
linux/c/ipc/bus/ubus_conduit/conduit_jni_c/conduit/include/client/: conduit_client.h
linux/c/ipc/bus/ubus_conduit/conduit_jni_c/conduit/include/server/: ubus_server_command.h
linux/c/ipc/bus/ubus_conduit/example_test/: FIXME  event_client  event_server.c  test.sh
linux/c/ipc/bus/ubus_conduit/hz_disk_mgr/: hz_disk_mgr.c
linux/c/ipc/bus/ubus_conduit/hz_disk_util/: Android.mk  hz_disk_util.c
linux/c/ipc/bus/ubus_conduit/pressure_test/: :w  CDT_PRESS_CLIENT  CDT_PRESS_SERVER  CLIENT  Makefile  SERVER  make.sh  test.sh  test_conduit.c
linux/c/ipc/bus/ubus_conduit/test/: Makefile  make  make.sh  test.sh  test_conduit  test_conduit.c
linux/c/ipc/bus/ubus_conduit_bak/: CMakeLists.txt  FIXME  conduit_client.c  conduit_client.h  conduit_common.h  conduit_server.c  conduit_server.h
linux/c/ipc/bus/ubus_conduit_bak/conduit_java/: Android.mk  local.properties  proguard.flags
linux/c/ipc/bus/ubus_conduit_bak/conduit_java/res/layout/: activity_main.xml
linux/c/ipc/bus/ubus_conduit_bak/conduit_java/res/values/: strings.xml
linux/c/ipc/bus/ubus_conduit_bak/conduit_java/src/com/horzon/conduit/mynative/: conduit.java
linux/c/ipc/bus/ubus_conduit_bak/conduit_java/src/com/horzon/conduit/test/: MainActivity.java
linux/c/ipc/bus/ubus_conduit_bak/conduit_jni_c/: conduit_client_native_lib.c
linux/c/ipc/bus/ubus_conduit_bak/conduit_jni_c/conduit/include/client/: ubus_app_error.h
linux/c/ipc/bus/ubus_conduit_bak/conduit_jni_c/conduit/include/common/: list.h
linux/c/ipc/bus/ubus_conduit_bak/conduit_jni_c/conduit/include/server/: conduit.h
linux/c/ipc/bus/ubus_conduit_bak/example_test/: Makefile  event_client.c  make.sh
linux/c/ipc/bus/ubus_conduit_bak/hz_disk_mgr/: Android.mk
linux/c/ipc/bus/ubus_conduit_bak/hz_disk_util/: README
linux/c/ipc/bus/ubus_conduit_bak/hz_sys_svr/: Android.mk  Makefile  hz_sys_srv.c
linux/c/ipc/bus/ubus_conduit_bak/pressure_test/: Makefile  SERVER  make.sh  test.sh  test_client.sh  test_conduit.c  test_server.sh
linux/c/ipc/bus/ubus_conduit_bak/test/: Makefile  make.sh  test_conduit  test_conduit.c
linux/c/ipc/unixsocket/: .unixsocket.c.swo  .unixsocket.h.swo  unixsocket.c  unixsocket.c.blocking  unixsocket.c.select.bak  unixsocket.c~  unixsocket.h
linux/c/ipc/unixsocket/test/: .unixsocket_test.c.swo  Makefile  cmockery.d  cppcheck.sh  test_unixsocket  unixsocket.d  unixsocket_test.c  unixsocket_test.c~  unixsocket_test.d
linux/c/log/: log.h~
linux/c/log/test/: Makefile  log_test.c  test_log
linux/c/sanity/: check.h  readme
linux/c/struct/: list.h
linux/c/struct/test/: Makefile  list_test.c  test_list
linux/c/system/: .system_call.c.swp  .system_call.h.swp  system_call.c  system_call.h
linux/c/uart/: uart.c  uart.h
